# NotebookAI

./: .gitignore  BUILD.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  VISION.md  pyrightconfig.json
.claude/skills/audit-notebookai/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: build-sidecar.yml  ci.yml  release.yml
.notebookai-build/: extract.sh  test-helpers.sh
.notebookai-build/tests/: phase-0.sh  phase-1.sh  phase-10.sh  phase-11.sh  phase-12.sh  phase-13.sh  phase-14.sh  phase-15.sh  phase-2.sh  phase-3.sh  phase-4.sh  phase-5.sh  phase-6.sh  phase-7.sh  phase-8.sh  phase-9.sh
archive/: README.md
backend/: .env.example  pyproject.toml
backend/notebookai/: __init__.py  cli.py  config.py  scaffold.py
backend/notebookai/adapters/: __init__.py  base.py  pdf.py  topic.py  url.py  youtube.py
backend/notebookai/agent/: __init__.py  budget.py  credentials.py  degraded.py  events.py  lint.py  operations.py  passive_watcher.py  runtime.py  scheduler.py  tools.py
backend/notebookai/api/: __init__.py  app.py  dependencies.py  main.py  sse.py
backend/notebookai/api/routers/: articles.py  ask.py  events.py  history.py  ingest.py  internal.py  library.py  lint.py  log.py  notebooks.py
backend/notebookai/chats/: __init__.py  store.py
backend/notebookai/git/: __init__.py  notebook_repo.py
backend/notebookai/index/: __init__.py  builder.py  embeddings.py  events.py  schema.py  store.py  watcher.py
backend/tests/: conftest.py  test_adapters.py  test_agent.py  test_api.py  test_chats.py  test_degraded.py  test_e2e_integration.py  test_frozen_compat.py  test_git.py  test_index.py  test_library.py  test_lint.py  test_passive_watcher.py  test_scaffold.py  test_scheduler.py
backend/tests/fixtures/html/: article.html  edge_cases.html
desktop/: .gitignore  README.md  package.json
desktop/sidecar/: README.md  build.py  generate_icons.py  notebookai-api.spec
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/binaries/: notebookai-api-aarch64-apple-darwin
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: CONTRACTS.md  architecture.md  branding.md  wiki-only-mode.md
frontend/: .gitignore  .npmrc  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/ask/: page.tsx
frontend/app/curate/: page.tsx
frontend/app/curate/history/: page.tsx
frontend/app/read/: page.tsx
frontend/app/welcome/: page.tsx
frontend/components/: ActivityStream.tsx  AgentStatusBadge.tsx  ArticleReader.tsx  ArticleTree.tsx  Backlinks.tsx  BudgetMeter.tsx  ChatComposer.tsx  ChatTranscript.tsx  CitationChip.tsx  CommitDetail.tsx  FindingCard.tsx  GraphView.tsx  HistoryTimeline.tsx  LibraryPanel.tsx  LintLog.tsx  LintScheduleIndicator.tsx  ModeNav.tsx  NotebookSwitcher.tsx  Providers.tsx  StreamingText.tsx  WelcomeStep1.tsx  WelcomeStep2.tsx  WelcomeStep3.tsx
frontend/components/ui/: Button.tsx  Card.tsx  Modal.tsx  Skeleton.tsx  Tooltip.tsx
frontend/e2e/: README.md  ask.spec.ts  curate.spec.ts  library.spec.ts  read.spec.ts  welcome.spec.ts
frontend/e2e/fixtures/: api-mocks.ts
frontend/lib/: api.gen.ts  api.ts  remarkWikilinks.ts  streaming.ts
frontend/scripts/: gen-api.mjs
frontend/store/: useNotebook.ts
scripts/: audit-notebookai.sh  verify-cross-cli.sh
skills/karpathy-llm-wiki/: README.md
