[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notebookai"
version = "0.1.0"
description = "NotebookAI backend — local-first LLM-powered knowledge base."
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jesper", email = "jesper_vang@me.com" }]
dependencies = [
    "pydantic>=2.5,<3",
    "sqlalchemy>=2.0,<3",
    "watchfiles>=0.21",
    "structlog>=23.2",
    "typer>=0.12",
    "sentence-transformers>=3.0",
    "sqlite-vec>=0.1.6",
    "numpy>=1.26",
    "python-ulid>=2.0",
    "pymupdf>=1.24",
    "pdfminer.six>=20231228",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "readability-lxml>=0.8.1",
    "html2text>=2024.2.26",
    "youtube-transcript-api>=0.6.2",
    "claude-agent-sdk>=0.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic-settings>=2.1",
    "sse-starlette>=2.1",
    "python-multipart>=0.0.9",
]

[project.scripts]
notebookai = "notebookai.cli:app"
notebookai-api = "notebookai.api.main:run"

[dependency-groups]
dev = [
    "pytest>=7.4",
    "ruff>=0.5",
    "pytest-asyncio>=0.23",
    "pillow>=12.2.0",
    # Sidecar build tool — used by desktop/sidecar/build.py to produce a
    # single-file binary so the Tauri app ships without requiring `uv` on
    # the user's machine. Dev-only because it's never imported by runtime code.
    "pyinstaller>=6.6",
]

[tool.hatch.build.targets.wheel]
packages = ["notebookai"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "UP007",  # X | Y union syntax — keep typing.Union for explicit long unions
    "B008",   # FastAPI/Typer use call expressions in defaults idiomatically
    "E501",   # line length is enforced by formatter, not the linter, so a few overflows in tables/messages are fine
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
markers = [
    "requires_claude: live test against Claude Agent SDK (skipped by default)",
]
